--- a/index.html
+++ b/index.html
@@ -25,39 +25,36 @@
         <!-- MENU SCREEN -->
         <div id="screen-menu" class="screen active">
 
-            <!-- 1. Learning Direction -->
-            <div class="menu-label" id="label-learning-mode">Lernrichtung</div>
-            <div class="menu-group grid-buttons">
-                <button class="mode-btn" data-mode="th-de">
-                    <span id="btn-th-de">Thai → Deutsch</span>
-                </button>
-                <button class="mode-btn" data-mode="de-th">
-                    <span id="btn-de-th">Deutsch → Thai</span>
-                </button>
-                <button class="mode-btn" data-mode="th-en">
-                    <span id="btn-th-en">Thai → Englisch</span>
-                </button>
-                <button class="mode-btn" data-mode="en-th">
-                    <span id="btn-en-th">Englisch → Thai</span>
-                </button>
+
+            <!-- 1. Type Selection (Card vs Quiz) -->
+            <div class="segmented-control">
+                <button class="segment-btn active" id="seg-flashcards" data-type="flashcards">Karteikarten</button>
+                <button class="segment-btn" id="seg-quiz" data-type="quiz">Quiz</button>
             </div>
 
             <!-- 2. Difficulty Level -->
-            <div class="menu-label" id="label-level">Schwierigkeitsgrad</div>
             <div class="menu-group">
                 <button class="mode-btn" id="btn-level-select">
                     <span id="level-display">Alle Levels</span>
                 </button>
             </div>
 
-            <!-- 3. Type Selection (Card vs Quiz) -->
-            <div class="menu-label" id="label-type">Modus</div>
-            <div class="segmented-control">
-                <button class="segment-btn active" id="seg-flashcards" data-type="flashcards">Karteikarten</button>
-                <button class="segment-btn" id="seg-quiz" data-type="quiz">Quiz</button>
+            <!-- 3. Learning Direction -->
+            <div class="menu-group grid-buttons">
+                <button class="mode-btn" data-mode="th-de">
+                    <span id="btn-th-de">🇹🇭 → 🇩🇪</span>
+                </button>
+                <button class="mode-btn" data-mode="de-th">
+                    <span id="btn-de-th">🇩🇪 → 🇹🇭</span>
+                </button>
+                <button class="mode-btn" data-mode="th-en">
+                    <span id="btn-th-en">🇹🇭 → 🇬🇧</span>
+                </button>
+                <button class="mode-btn" data-mode="en-th">
+                    <span id="btn-en-th">🇬🇧 → 🇹🇭</span>
+                </button>
             </div>
 
-            <div class="menu-label" id="label-review">Review</div>
             <div class="menu-group">
                 <button class="mode-btn" id="btn-review-errors">
                     <span id="btn-text-review">Fehler wiederholen</span>
@@ -66,8 +63,6 @@
                     <span id="btn-text-reset">Fortschritt zurücksetzen</span>
                 </button>
             </div>
-
-            <div class="menu-label" id="label-stats">Statistik</div>
             <div class="menu-group">
                 <button class="mode-btn" id="btn-open-stats">
                     <span id="btn-text-stats">Statistik ansehen</span>
