--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             </div>
             <h1 id="app-title">Thai Cards</h1>
             <div class="header-right">
+                <button id="theme-btn" class="icon-btn" style="margin-right: 8px;">MN</button>
                 <button id="lang-btn" class="icon-btn lang-toggle">🇩🇪</button>
             </div>
         </header>
