--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <!-- 1. Type Selection (Card vs Quiz) -->
             <div class="segmented-control">
                 <button class="segment-btn active" id="seg-flashcards" data-type="flashcards">Karteikarten</button>
+                <button class="segment-btn" id="seg-sentence" data-type="sentence">Sätze</button>
                 <button class="segment-btn" id="seg-quiz" data-type="quiz">Quiz</button>
             </div>
 
@@ -135,6 +136,8 @@
                             <button class="audio-btn" id="btn-audio-back">🔊</button>
                         </div>
                         <div class="card-subtext" id="back-sub">...</div>
+                        <div class="card-phonetic" id="back-translit"></div>
+                        <div class="card-snippets" id="back-snippets"></div>
                     </div>
                 </div>
             </div>
